[gd_scene load_steps=37 format=3 uid="uid://dmw38bhnb8rup"]

[ext_resource type="Script" uid="uid://bjsp3wriwk6f7" path="res://Scripts/unit scripts/Unit_Script.gd" id="1_x6ybo"]
[ext_resource type="Texture2D" uid="uid://0tqxbdf81u7s" path="res://Assets/sprites/Highlight.png" id="2_uiyey"]
[ext_resource type="Texture2D" uid="uid://bn7vsoptvo0cn" path="res://Assets/NPC/Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Orc/Orc/Orc-Attack01.png" id="3_mq1jn"]
[ext_resource type="Texture2D" uid="uid://csu0wpkvvf1hf" path="res://Assets/NPC/Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Orc/Orc/Orc-Death.png" id="3_uiyey"]
[ext_resource type="Texture2D" uid="uid://bl00ql81j5wys" path="res://Assets/NPC/Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Orc/Orc/Orc-Idle.png" id="3_x6ybo"]
[ext_resource type="PackedScene" uid="uid://rdo7j4b7upml" path="res://Scenes/unit/unit parts/unit_hit_range.tscn" id="4_mq1jn"]
[ext_resource type="PackedScene" uid="uid://beqf21rwewcde" path="res://Scenes/unit/unit parts/attack_swing_timer.tscn" id="6_nr51a"]
[ext_resource type="Texture2D" uid="uid://duaqv53b7o5tg" path="res://Assets/NPC/Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Orc/Orc/Orc-Walk.png" id="6_p6o1c"]
[ext_resource type="PackedScene" uid="uid://5r8d7lhtjcs6" path="res://Scenes/unit/unit parts/unit_healthbar.tscn" id="9_i0q5n"]
[ext_resource type="Script" uid="uid://0ay68vcscrvb" path="res://Scripts/unit scripts/unit_healthbar.gd" id="10_u6vit"]

[sub_resource type="AtlasTexture" id="AtlasTexture_an2qc"]
atlas = ExtResource("3_mq1jn")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6uj5"]
atlas = ExtResource("3_mq1jn")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gyr10"]
atlas = ExtResource("3_mq1jn")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcw26"]
atlas = ExtResource("3_mq1jn")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ma2e"]
atlas = ExtResource("3_mq1jn")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hexx"]
atlas = ExtResource("3_mq1jn")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6vit"]
atlas = ExtResource("3_uiyey")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2330"]
atlas = ExtResource("3_uiyey")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_yadup"]
atlas = ExtResource("3_uiyey")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gopl"]
atlas = ExtResource("3_uiyey")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_uiyey"]
atlas = ExtResource("3_x6ybo")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nr51a"]
atlas = ExtResource("3_x6ybo")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mq1jn"]
atlas = ExtResource("3_x6ybo")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6o1c"]
atlas = ExtResource("3_x6ybo")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pisw7"]
atlas = ExtResource("3_x6ybo")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0q5n"]
atlas = ExtResource("3_x6ybo")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_irmib"]
atlas = ExtResource("6_p6o1c")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_so5bp"]
atlas = ExtResource("6_p6o1c")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3nryv"]
atlas = ExtResource("6_p6o1c")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ft46c"]
atlas = ExtResource("6_p6o1c")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_yetxk"]
atlas = ExtResource("6_p6o1c")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrp8p"]
atlas = ExtResource("6_p6o1c")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_prtfr"]
atlas = ExtResource("6_p6o1c")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_e53vh"]
atlas = ExtResource("6_p6o1c")
region = Rect2(700, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_068tf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_an2qc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6uj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gyr10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qcw26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ma2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hexx")
}],
"loop": false,
"name": &"Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6vit")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2330")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yadup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gopl")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uiyey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nr51a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mq1jn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6o1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pisw7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0q5n")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_irmib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_so5bp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3nryv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ft46c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yetxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrp8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_prtfr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e53vh")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_yt4i0"]
radius = 11.0

[node name="Unit_Main" type="CharacterBody2D" groups=["Enemy_Unit"]]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_x6ybo")
unit_base_attack = 5

[node name="Unit_Highlight" type="Sprite2D" parent="."]
visible = false
position = Vector2(-1, -2.5)
scale = Vector2(1, 1.15)
texture = ExtResource("2_uiyey")

[node name="Unit_Ani_Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_068tf")
animation = &"Walk"
autoplay = "Idle"

[node name="Unit_movement_collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_yt4i0")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 5.0
target_desired_distance = 5.0
path_max_distance = 50.0
path_postprocessing = 1
avoidance_enabled = true
debug_enabled = true
debug_use_custom = true
debug_path_custom_color = Color(1, 0.027451, 0, 1)

[node name="Hit_Range" parent="." instance=ExtResource("4_mq1jn")]

[node name="Attack_Swing_Timer" parent="." instance=ExtResource("6_nr51a")]

[node name="Unit_Healthbar" parent="." instance=ExtResource("9_i0q5n")]
script = ExtResource("10_u6vit")

[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="body_entered" from="Hit_Range" to="Hit_Range" method="_on_body_entered"]
[connection signal="body_exited" from="Hit_Range" to="Hit_Range" method="_on_body_exited"]
[connection signal="target_list_updated" from="Hit_Range" to="." method="_on_hit_range_target_list_updated"]
[connection signal="timeout" from="Attack_Swing_Timer" to="." method="_on_attack_swing_timer_timeout"]
